# bearpaw-daemon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTING.md  config.example.yaml  config.tauri.yaml  config.usb.yaml  config.yaml  now_scanning.txt  pyproject.toml  requirements.txt  scanner.db
.github/workflows/: ci.yml  release.yml
.pyinstaller/pyinstaller/bincache00py31164bit/arm64/adhoc/no-entitlements/: libsqlite3.dylib  libusb-1.0.dylib
apps/daemon/: README.md  config.example.yaml  pyproject.toml
apps/daemon/packaging/systemd/: bearpaw.service
apps/daemon/scripts/: generate_openapi.py
apps/daemon/src/bearpaw/: api.py  config.py  preferences.py  scheduler.py  websocket.py
apps/daemon/src/bearpaw/audio/: __init__.py  capture.py  hls.py
apps/daemon/src/bearpaw/exporters/: mqtt.py
apps/daemon/tests/: mock_scanner.py  test_api.py  test_replay.py
docs/: openapi.json
docs/superpowers/specs/: 2026-04-15-hls-audio-streaming-design.md
packaging/: README.md  bearpaw.spec  scanner-bridge.spec
packaging/launchd/: com.bearpaw.plist  com.scanner.bridge.plist
packaging/systemd/: bearpaw.service  scanner-bridge.service
packaging/tauri/: build.ps1  build.sh  scanner-bridge-tauri.spec
packaging/windows/: bearpaw.nssm.txt  scanner-bridge.nssm.txt
scripts/: generate_openapi.py  install-linux.sh  install-pi.sh
src/bearpaw/: __init__.py  api.py  config.example.yaml  config.py  discovery.py  main.py  middleware.py  models.py  persistence.py  state.py  sync.py  transport.py  websocket.py
src/bearpaw/exporters/: __init__.py  bc125at_ss.py  text_exporter.py
src/bearpaw/protocol/: __init__.py  base.py  bc125at.py  sr30c.py
src/scanner_bridge/: __init__.py  api.py  config.py  discovery.py  main.py  middleware.py  models.py  persistence.py  preferences.py  replay.py  scheduler.py  state.py  sync.py  transport.py  transport_usb.py  websocket.py
src/scanner_bridge/analytics/: database.py
src/scanner_bridge/exporters/: __init__.py  bc125at_ss.py  json_stream.py  mqtt.py  text_exporter.py
src/scanner_bridge/protocol/: __init__.py  base.py  bc125at.py  sr30c.py
tests/: fixtures.py  helpers.py  mock_scanner.py  stubs.py  test_api.py  test_audio.py  test_config.py  test_hardware.py  test_persistence.py  test_protocol.py  test_replay.py  test_simple.py  test_state_store.py
