[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bearpaw"
version = "1.0.0"
description = "Bearpaw backend service for Uniden scanners"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Bearpaw"}]

dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pyserial>=3.5",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "tomli>=2.0.1",
  "paho-mqtt>=1.6.1",
  "httpx>=0.27.0",
  "pyusb>=1.2.1",
]

[project.scripts]
bearpaw = "bearpaw.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
