[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bearpaw-daemon"
version = "1.1.0"
description = "Headless HTTP + WebSocket control service for Uniden BC125AT and SR30C handheld scanners"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jeremy Fuksa"}]
keywords = ["scanner", "uniden", "bc125at", "sr30c", "ham-radio", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Ham Radio",
]

dependencies = [
  "fastapi>=0.110.0,<1.0",
  "uvicorn[standard]>=0.27.0",
  "pyserial>=3.5",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
  "tomli>=2.0.1",
  "paho-mqtt>=1.6.1",
  "httpx>=0.27.0",
  "pyusb>=1.2.1",
  "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/jeremyfuksa/bearpaw-daemon"
Repository = "https://github.com/jeremyfuksa/bearpaw-daemon"
Issues = "https://github.com/jeremyfuksa/bearpaw-daemon/issues"
Changelog = "https://github.com/jeremyfuksa/bearpaw-daemon/blob/main/CHANGELOG.md"

[project.scripts]
bearpaw = "bearpaw.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bearpaw = ["config.example.yaml"]
